--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/ishani1911">
             <i class="fab fa-github"></i>
           </a>
                  </div>
