--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
+	<li class="list-inline-item">
+            <i class="fab fa-python"></i>
+          </li>
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
           </li>
