--- a/index.html
+++ b/index.html
@@ -175,9 +175,6 @@
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
           </li>
-	<li class="list-inline-item">
-            <i class="fab fa-python"></i>
-          </li>
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
           </li>
@@ -191,7 +188,9 @@
 <li class="list-inline-item">
             <i class="fab fa-js"></i>
           </li>
-
+<li class="list-inline-item">
+            <i class="fab fa-python"></i>
+          </li>
          </ul>
 
             </section>
@@ -217,6 +216,17 @@
             <h3 class="mb-0">Blood Bank Management System</h3>
             <div class="subheading mb-3">Manages all the blood bank database operations. Search nearby bloodbanks through gmaps. Direct dial hospitals in case of emergency through app itself. Get notifications for upcoming blood camps.</div>
             <p>Technologies: Android, Firebase</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
+          </div>
+        </div>
+	      
+	      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Restaurant Website</h3>
+            <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
+            <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"></span>
