--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
 	      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Restaurant Website</h3>
-            <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.<a href="https://ishani1911.github.io/RW1/index.html"></a></div>
-            <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
+            <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
+		  <div><a href="https://ishani1911.github.io/RW1/index.html"></a></div>
+	     <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary"></span>
