--- a/index.html
+++ b/index.html
@@ -238,7 +238,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Restaurant Website</h3>
             <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
-		  <div><a href="https://ishani1911.github.io/RW1/index.html"></a></div>
+		  <div class="social-icons">
+          <a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">
+      
+          </a>
+		  </div>
 	     <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
           <div class="resume-date text-md-right">
