--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
 	      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Restaurant Website</h3>
-            <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
-		 <div class"subheading mb-3"><a href="https://www.linkedin.com/in/ishani-rede-1316a0177/"></a></div>
+            <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.
+		  <a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">Restaurant Website</a></div>
+		 
 	     <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
           <div class="resume-date text-md-right">
