--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Restaurant Website</h3>
             <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
-		  <a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">Restaurant Website</a>
+		  <div class="rwlink">="<a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">Restaurant Website</a></div>
 		 
 	     <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
