--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Restaurant Website</h3>
             <div class="subheading mb-3">A website for a pizza restaurant which contains all the details about the restaurant like address, menu, open hours and much more.</div>
-		  <div class="rwlink">="<a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">Restaurant Website</a></div>
-		 
+		  <div class="rwlink"><a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">Click here to visit Restaurant Website</a></div>
+		  <div></div>
 	     <p>Technologies: HTML, CSS, JavaScript, Bootstrap</p>
           </div>
           <div class="resume-date text-md-right">
