--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#internships">Internships</a>
+        </li>
              </ul>
     </div>
   </nav>
@@ -66,7 +69,7 @@
         <div class="subheading mb-5">
           <a href="mailto:ishanirede1911@gmail.com"></a>
         </div>
-        <p class="lead mb-5">Hello! I'm third year computer engineering student at Savitribai Phule Pune University.</p>
+        <p class="lead mb-5">Android enthusiast and passionate about Web Development !</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ishani-rede-1316a0177/">
             <i class="fab fa-linkedin-in"></i>
@@ -139,6 +142,17 @@
             <span class="text-primary">May 2017- June 2017</span>
           </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Japanese Level N5</h3>
+            <div class="subheading mb-3">JLPT</div>
+            <p>Japanese Level N5</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2019</span>
+          </div>
+        </div>
        
       </div>
 
@@ -153,7 +167,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Zeal College of Engineering and Research</h3>
-            <div class="subheading mb-3">Bachelor of Computer Engineering</div>
+            <div class="subheading">Bachelor of Computer Engineering</div>
+            <p>CGPA: 8.165 / 10.00</p>
             <div></div>
             <p></p>
           </div>
@@ -165,8 +180,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">MIT Polytechnic</h3>
-            <div class="subheading mb-3">Diploma in Computer Engineering</div>
-            <p></p>
+            <div class="subheading">Diploma in Computer Engineering</div>
+            <p>Percentage: 76.25%</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2015 - May 2018</span>
@@ -247,6 +262,63 @@
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Self Watering Plant System</h3>
+            <div class="subheading mb-3">An IOT based self watering plant system that automatically waters the plants by calculating it's moisture content in the soil. It also sends notification to the user about the moisture content and when the plants are watered.</div>
+		  <div></div>
+	     <p>Technologies: Internet of Things, Android</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Chat Application</h3>
+            <div class="subheading mb-3">A hybrid chat application developed using react-native,redux and nodejs.</div>
+		  <div></div>
+	     <p>Technologies: React-native, Redux, NodeJs</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
+          </div>
+        </div>
+
+
+              </div>
+    </section>
+
+
+     <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="internships">
+      <div class="w-100">
+        <h2 class="mb-5">Internships</h2>
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Front End Web Development Intern</h3>
+            <div class="subheading mb-1 mt-1">SoDo Services</div>
+            <div class="subheading mb-3">June 2020 – July 2020</div>
+            <p>Development of a static website in Html, CSS, Bootstrap and JavaScript</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
+          </div>
+        </div>
+
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">MERN Stack Intern</h3>
+            <div class="subheading mb-1 mt-1">GateLength</div>
+            <div class="subheading mb-3"> July 2020 – August 2020</div>
+            <p>Development of a hybrid chat application using react native</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"></span>
+          </div>
+        </div>
 
               </div>
     </section>
