--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">MERN Stack Intern</h3>
-            <div class="subheading mb-1 mt-1">GateLength</div>
+            <div class="subheading mb-1 mt-1">Exprtie</div>
             <div class="subheading mb-3"> July 2020 – August 2020</div>
             <p>Development of a hybrid chat application using react native</p>
           </div>
